adding playnext routes and get host routes
